force-app/main/default/objects/Dan360_Matricula__c/Dan360_Matricula__c.object-meta.xml
<CustomObject>
    <description>Objeto que guarda las matrículas de los profesionales de la salud.</description>
    <label>Matrícula</label>
    <nameField>
        <displayFormat>MAT-{00000}</displayFormat>
        <label>Matricula Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matrículas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>