force-app/main/default/objects/Dan360_Matricula__c/fields/Municipios__c.field-meta.xml
<CustomField>
    <fullName>Municipios__c</fullName>
    <label>Municipio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Provincia__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Municipios</valueSetName>
    </valueSet>
</CustomField>