force-app/main/default/objects/Dan360_Matricula__c/fields/Numero_de_matricula__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_matricula__c</fullName>
    <label>Numero de matricula</label>
    <length>18</length>
    <type>Text</type>
</CustomField>