force-app/main/default/objects/Dan360_Matricula__c/recordTypes/Municipal.recordType-meta.xml
<RecordType>
    <fullName>Municipal</fullName>
    <active>true</active>
    <label>Municipal</label>
</RecordType>