force-app/main/default/objects/Dan360_Matricula__c/recordTypes/Provincial.recordType-meta.xml
<RecordType>
    <fullName>Provincial</fullName>
    <active>true</active>
    <label>Provincial</label>
</RecordType>