force-app/main/default/objects/Dan360_Matricula__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Profesional__c</columns>
    <columns>Provincia__c</columns>
    <columns>Municipios__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>